Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13684

InnoDB race condition between fil_crypt_thread and btr_scrub_init

    XMLWordPrintable

Details

    Description

      There is a race condition in InnoDB startup. A number of fil_crypt_thread are created by fil_crypt_threads_init(). These threads may call btr_scrub_complete_space() before btr_scrub_init() was called. Those too early calls would be accessing an uninitialized scrub_stat_mutex.

      The bug was introduced in MariaDB 10.1.10 when the btr_scrub_init() call was moved after the fil_crypt_threads_init() call. That change was made unnecessary in a MDEV-12052 related clean-up in MariaDB 10.1.24.

      The bug was caught in 10.2 thanks to the assertion that was added in MDEV-13485.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: